package de.bhelfert.rockpaperscissors.game;

public enum GameResult {
    Player1Wins, Player2Wins, Tie
}
