package de.bhelfert.rockpaperscissors.game.classic;

public enum ClassicGameItem {
    computer, rock, paper, scissors
}
