package de.bhelfert.rockpaperscissors.game.lizardspock;

public enum LizardSpockGameItem {
    lizard, spock
}
